--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -47,7 +47,7 @@
 
 .facet-filters__label {
   display: block;
-  color: rgba(var(--color-foreground), 0.85);
+  color: rgba(var(--color-foreground), 1);
   font-size: 1.4rem;
   margin: 0 2rem 0 0;
 }
@@ -183,7 +183,7 @@
 
 .facets__heading {
   display: block;
-  color: rgba(var(--color-foreground), 0.85);
+  color: rgba(var(--color-foreground),1);
   font-size: 1.4rem;
   margin: -1.5rem 2rem 0 0;
 }
